added DOM selector

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,11 @@
 		<script src="js/src/popup.js"></script>
 	</head>
 	<body>
+		<section class="selector">
+			<div>
+				<button data-function="select">SELECT CHORDS</button>
+			</div>
+		</section>
 		<section class="convert">
 			<div>
 				<button data-function="convert">ENABLE</button>
