--- a/app/popup.html
+++ b/app/popup.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Getting Started Extension's Popup</title>
-		<link rel="stylesheet" type="text/css" href="css/popup.css">
-
-		<script src="js/vendor/jquery.js"></script>
-		<script src="js/src/popup.js"></script>
-	</head>
+	    <meta charset="utf-8">
+	  
+	    <link href="styles/popup.css" rel="stylesheet">
+  	</head>
 	<body>
 		<section class="selector">
 			<div>
@@ -25,6 +23,8 @@
 				<button data-function="transposeDown">-</button>
 			</div>
 		</section>
+
+		<script src="scripts/popup-vendor.js"></script>
+	    <script src="scripts/popup.js"></script>
 	</body>
 </html>
-
